[package]
name = "chainvote"
version = "0.1.0"
authors = ["eltneg <yorewole@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.5.8"
byteorder = "1.3"
thiserror = "1.0"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"


[lib]
crate-type = ["cdylib", "lib"]
